--- a/AUTHORS
+++ b/AUTHORS
@@ -34,5 +34,8 @@ COPYRIGHT: (ordered alphabetically)
 
 AUTHORS: (ordered alphabetically)
         David Rheinsberg <david.rheinsberg@gmail.com>
+        Lorenzo Arena <lorenzo.arena@powersoft.com>
+        Michele Dionisio <michele.dionisio@gmail.com>
         Thomas Haller <thaller@redhat.com>
         Tom Gundersen <teg@jklm.no>
+        Yuri Chornoivan <yurchor@ukr.net>
