--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ COPYRIGHT: (ordered alphabetically)
 
 AUTHORS: (ordered alphabetically)
         David Rheinsberg <david.rheinsberg@gmail.com>
+        Evgeny Vereshchagin <evvers@ya.ru>
         Lorenzo Arena <lorenzo.arena@powersoft.com>
         Michele Dionisio <michele.dionisio@gmail.com>
         Thomas Haller <thaller@redhat.com>
