doc: update README.md for typography
Signed-off-by: Jan Engelhardt <jengelh@inai.de>
(keep `e.g.,` and update AUTHORS)
Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -35,6 +35,7 @@ COPYRIGHT: (ordered alphabetically)
 AUTHORS: (ordered alphabetically)
         David Rheinsberg <david.rheinsberg@gmail.com>
         Evgeny Vereshchagin <evvers@ya.ru>
+        Jan Engelhardt <jengelh@inai.de>
         Lorenzo Arena <lorenzo.arena@powersoft.com>
         Michele Dionisio <michele.dionisio@gmail.com>
         Thomas Haller <thaller@redhat.com>
