build: update AUTHORS
Update the AUTHORS file to include recent contributions.

Signed-off-by: David Rheinsberg <david@readahead.eu>

--- a/AUTHORS
+++ b/AUTHORS
@@ -40,6 +40,7 @@ AUTHORS: (ordered alphabetically)
         Jan Engelhardt <jengelh@inai.de>
         Lorenzo Arena <lorenzo.arena@powersoft.com>
         Michele Dionisio <michele.dionisio@gmail.com>
+        Nikita Popov <npopov@redhat.com>
         Thomas Haller <thaller@redhat.com>
         Tom Gundersen <teg@jklm.no>
         Yuri Chornoivan <yurchor@ukr.net>
